--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Voice Detection"
-        android:id="@+id/voiceBtn"
+        android:text="Sound Detection"
+        android:id="@+id/soundBTN"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -18,7 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/listView"
         android:layout_below="@+id/textView"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignEnd="@+id/soundText" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,8 +27,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/instruction"
         android:id="@+id/textView"
-        android:layout_below="@+id/voiceBtn"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/soundBTN"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,5 +37,14 @@
         android:id="@+id/soundText"
         android:layout_above="@+id/textView"
         android:layout_alignEnd="@+id/textView" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Movement Detection"
+        android:id="@+id/moveBTN"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/soundText" />
 
 </RelativeLayout>
