--- a/app/src/main/res/layout/activity_move_detection.xml
+++ b/app/src/main/res/layout/activity_move_detection.xml
@@ -4,20 +4,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ca.hwlo.sensory.SensorActivity">
+    tools:context="ca.hwlo.sensory.MoveDetection">
+
+    <TextView android:text="Movement Detection" android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/moveText" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/moveBTN"
+        android:layout_below="@+id/moveText"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/sensorInfo"
-        android:layout_below="@+id/sensorData" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/sensorData"
+        android:text="The Linear Acceleration is very sensitive, it may take 5 - 10 seconds for it to be 'still' "
+        android:id="@+id/textView2"
+        android:layout_below="@+id/moveBTN"
         android:layout_alignParentStart="true" />
 
 </RelativeLayout>
